# regex

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  codegen.sh
automaton/: nfa.c  nfa.h
codegen/: instruction.c  instruction.h  mcode.h  regex-actions.c  regex-actions.h
codegen/x64/: amd64.h  mcode.c  mcode.h  opcodes.c  opcodes.h  registers.h
container/: allocator.c  allocator.h  array.c  array.h  stack.c  stack.h  utils.c  utils.h
grammar/: action-table.h  action.c  action.h  allocator.c  allocator.h  char_t.h  reduce.c  stack.c  stack.h  target.c  target.h  terminal.h  token.c  token.h
grammar/templates/: action-table.c  action-table.c.tpl  reduce.h  reduce.h.tpl  reduces.h  target.c  target.c.tpl  terminal.c  terminal.c.tpl  tokens.c  tokens.c.tpl  tokens.h  tokens.h.tpl
script/: DATA.py  codegen.py
test/: debug.c  test-all.c  test-produce.c  test-tokenize.c
test/produce/: branch.c  charset.c  group.c  illegal.c  quantified.c  sequence.c  test-produce.c  test-produce.h
test/tokenize/: char.c  number.c  over-len.c  single-characters.c  test-tokenize.c  test-tokenize.h
